# rs-openai

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  rust-clippy.yml
examples/: Cargo.toml
examples/audio/: Cargo.toml
examples/audio/src/: main.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/chat_stream_with_actix_web/: Cargo.toml
examples/chat_stream_with_actix_web/src/: main.rs
examples/completions/: Cargo.toml
examples/completions/src/: main.rs
examples/edits/: Cargo.toml
examples/edits/src/: main.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/engines/: Cargo.toml
examples/engines/src/: main.rs
examples/files/: Cargo.toml
examples/files/assets/: books_training_file.jsonl  news_training_file.jsonl  training_file.jsonl
examples/files/src/: main.rs
examples/fine_tunes/: Cargo.toml
examples/fine_tunes/src/: main.rs
examples/fine_tuning/src/: main.rs
examples/images/: Cargo.toml
examples/images/src/: main.rs
examples/models/: Cargo.toml
examples/models/src/: main.rs
examples/moderations/: Cargo.toml
examples/moderations/src/: main.rs
rs_openai/: Cargo.toml  README.md
rs_openai/src/: audio.rs  chat.rs  client.rs  completions.rs  edits.rs  embeddings.rs  engines.rs  error.rs  files.rs  fine_tunes.rs  images.rs  lib.rs  macro.rs  models.rs  moderations.rs
rs_openai/src/apis/: assistants.rs  audio.rs  batch.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  engines.rs  files.rs  fine_tunes.rs  fine_tuning.rs  images.rs  messages.rs  mod.rs  models.rs  moderations.rs  runs.rs  threads.rs  uploads.rs
rs_openai/src/interfaces/: assistants.rs  audio.rs  batch.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  engines.rs  files.rs  fine_tunes.rs  fine_tuning.rs  images.rs  messages.rs  mod.rs  models.rs  moderations.rs  runs.rs  threads.rs  uploads.rs
rs_openai/src/shared/: errors.rs  macro.rs  mod.rs  response_wrapper.rs  types.rs  utils.rs
