[package]
name = "rs_openai"
version = "0.4.0"
edition = "2021"
authors = ["Yancey Leo <developer@yanceyleo.com>"]
description = "The OpenAI Rust library provides convenient access to the OpenAI API from Rust applications."
repository = "https://github.com/YanceyOfficial/rs-openai"
homepage = "https://yanceyleo.com"
license = "MIT"
keywords = ["openai"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
derive_builder = "0.12.0"
dotenvy = "0.15.6"
futures = "0.3.27"
reqwest = { version = "0.11.14", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
