[package]
name = "chat_stream_with_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.2"
futures = "0.3.27"
dotenvy = "0.15.7"
actix-web-lab = "0.19.1"
rs_openai = {path = "../../rs_openai"}